# beetle

./: .gitignore  Cargo.toml  README.md  traits.md
beetle/: Cargo.toml
beetle/src/: body.rs  docs.rs  futures.rs  lib.rs  request.rs  response.rs  runtime.rs  service.rs
beetle/src/body/: collect.rs  stream.rs  tcp.rs
beetle/src/common/: bytestr.rs  mod.rs
beetle/src/ext/: mod.rs
beetle/src/headers/: entry.rs  iter.rs  map.rs  mod.rs  name.rs  value.rs
beetle/src/helpers/: json.rs  mod.rs
beetle/src/http/: extension.rs  headers.rs  mod.rs  version.rs
beetle/src/io/: listener.rs  mod.rs  stream.rs
beetle/src/net/: socket.rs
beetle/src/request/: body.rs  futures.rs  parts.rs
beetle/src/response/: body.rs  into_response.rs  parts.rs  writer.rs
beetle/src/routing/: handler.rs  matcher.rs  mod.rs  router.rs
beetle/src/service/: http.rs  tcp.rs
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
tcio/: Cargo.toml
tcio/src/: body.rs  docs.rs  futures.rs  http.rs  lib.rs  request.rs  response.rs  runtime.rs
tcio/src/common/: anymap.rs  bytestr.rs  mod.rs
tcio/src/helpers/: mod.rs
tcio/src/http/: extension.rs  headers.rs  method.rs  mod.rs  status.rs  version.rs
tcio/src/request/: from_request.rs  futures.rs  parser.rs  parts.rs
tcio/src/response/: writer.rs
tcio/src/routing/: branch.rs  handler.rs  mod.rs  router.rs  state.rs
tcio/src/service/: servicefn.rs  tcp.rs
