[package]
name = "beetle"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
itoa = "1.0.15"
log = { version = "0.4.27", optional = true }
memchr = "2.7.4"
pin-project-lite = "0.2.16"
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
tokio = { version = "1.45.0", features = ["net", "rt"], optional = true }

[features]
tokio = ["dep:tokio"]
log = ["dep:log"]
json = ["dep:serde","dep:serde_json"]
